# community-shill-bot

./: .env-example  .gitignore  Dockerfile  alembic.ini  cli.py  docker-compose.yaml  monitored_test.py  pyproject.toml  scrape_test.py  tg_shill_bot.db
alembic/: env.py
alembic/versions/: 0721605429b6_.py  34c796e12d68_.py  45de2cfdbd39_.py  9083dbc77804_.py  9db8cfbc3595_.py  b8e7baaf3dc4_create_chat_room_settings.py  c8e3066ad94f_create_link_tracking_table.py  de8990d649e1_.py  def6b96dcf6b_.py  ec60c16be02d_.py  f30f918b6604_create_base_schema.py
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
chart/templates/tests/: test-connection.yaml
src/: alembic.ini  cli.py  monitored_test.py
src/alembic/versions/: 0fe72e384366_.py  162fffcec05b_.py  1f72fe63169b_.py  29d2993aacb9_.py  38d7b3f323bf_.py  3ca10fde0d3c_.py  4b84a8ad8261_.py  4d1d9cc5f2de_.py  6db933462259_.py  72e0f25b5b71_.py  8b3349c27be7_.py  9e00cc5487af_.py  9f877f7ff9b2_.py  c6dd915623ec_.py  d0c8d93d9a23_.py  dacac1b6b233_.py  faacd2de44e4_.py
src/tg_shill_bot/: __init__.py  tg_shill_bot.py
src/tg_shill_bot/bot/: common.py  telegram.py
src/tg_shill_bot/data_sources/: __init__.py  reddit.py  twitter.py  (+1 more)
tg_shill_bot/: tg_shill_bot.py
tg_shill_bot/bot/: telegram.py
tg_shill_bot/data_sources/: __init__.py  reddit.py  twitter.py  youtube.py
tg_shill_bot/model/: __init__.py  chat_room.py  link_tracker.py  shill_chat_room_settings.py  shill_data_source.py  shill_link_tracker.py
(+5 files in other folders)
