[tool.poetry]
name = "tg-shill-bot"
version = "0.1.0"
description = "Telegram bot that monitors socials for shill potential shill targets."
authors = ["Greg Horejsi <g.horejsi81@gmail.com>"]
license = "MIT"
packages = [
    { include = "tg_shill_bot" }
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.3"
python-telegram-bot = "^13.11"
praw = "^7.5.0"
pandas = "^1.4.0"
SQLAlchemy = "^1.4.31"
python-dotenv = "^0.19.2"
alembic = "^1.7.6"
tweepy = "^4.5.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
